--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <script src="./lib/popper.js"></script>
 <script src="./lib/tippy.js"></script>
 
+
 <script type="module">
 
     // Set up application
@@ -39,7 +40,9 @@
 
     import {messages as localeMessages} from "./lib/xeokit-bim-viewer/messages.js";
 
+
     window.onload = function () {
+
 
         const requestParams = getRequestParams();
         const locale = requestParams.locale || "en";
@@ -63,6 +66,8 @@
                 messages: localeMessages,
                 locale: locale
             }),
+
+           
             canvasElement: document.getElementById("myCanvas"), // WebGL canvas
             explorerElement: document.getElementById("myExplorer"), // Left panel
             toolbarElement: document.getElementById("myToolbar"), // Toolbar
@@ -71,6 +76,8 @@
             busyModelBackdropElement: document.getElementById("myViewer"),
             enableEditModels: enableEditModels
         });
+
+        console.log("--vib viewer---",bimViewer);
 
         bimViewer.localeService.on("updated", () => {
             const localizedElements = document.querySelectorAll('.xeokit-i18n');
